--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+#box{
+	width: 300px;
+	background-color:"light blue";
+	margin: 20px;
+	border:15px solid blue;
+	padding:50px;
+	
+}
