--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,29 @@
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: white;
+}
 
-/* Your CSS Code here. */
-#box{
-	width: 300px;
-	background-color:"light blue";
-	margin: 20px;
-	border:15px solid blue;
-	padding:50px;
-	
+.outer-box {
+    margin: 20px;
+    border: 15px solid blue;
+    background-color: blue;
+    display: inline-block;
+}
+
+.inner-box {
+    padding: 50px;
+    width: 300px;
+    background-color: lightblue;
+    color: black;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+p {
+    margin: 0;
 }
