--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,7 @@
-*{
-	margin:0;
-	padding:0;
-	box-sizing:border-box;
-}
-#box{
-	margin: 20px; 
-	border: 15px solid blue; 
-	padding: 50px; 
-	width: 300px; 
-	background-color: lightblue; 
-	
-
+div{
+	width:300px;
+	padding:50px;
+	background-color: rgb(173,216,230);
+	border:15px solid rgb(0,0,255);
+	margin:20px;
 }
