--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 div{
 	width:300px;
 	padding:50px;
-	background-color: #ADD8E6;
-	border:15px solid #0000FF;
+	background-color: rgb(173,216,230);
+	border:15px solid rgb(0,0,255);
 	margin:20px;
 }
